More minor tweaks.